HelloUltraviolet/Fixtures/RejectedSource/Keys/SharedCapturingClosureYieldKeys/Expected.uv
//! Expected diagnostic metadata for the SharedCapturingClosureYieldKeys rejected-source specimen.

expectedDiagnostic("E-CON-0213", "requirement.21.SharedCapturingClosureYieldKeys")
